--- a/index.html
+++ b/index.html
@@ -1,42 +1,78 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Socket.IO chat</title>
-    <style>
-      body { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Chat Room</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
+    }
+    #messages {
+      list-style-type: none;
+      padding: 0;
+    }
+    #messages li {
+      margin: 5px 0;
+    }
+    #input {
+      width: 300px;
+      padding: 10px;
+    }
+  </style>
+</head>
+<body>
 
-      #form { background: rgba(0, 0, 0, 0.15); padding: 0.25rem; position: fixed; bottom: 0; left: 0; right: 0; display: flex; height: 3rem; box-sizing: border-box; backdrop-filter: blur(10px); }
-      #input { border: none; padding: 0 1rem; flex-grow: 1; border-radius: 2rem; margin: 0.25rem; }
-      #input:focus { outline: none; }
-      #form > button { background: #333; border: none; padding: 0 1rem; margin: 0.25rem; border-radius: 3px; outline: none; color: #fff; }
+<h1>Chat Room</h1>
 
-      #messages { list-style-type: none; margin: 0; padding: 0; }
-      #messages > li { padding: 0.5rem 1rem; }
-      #messages > li:nth-child(odd) { background: #efefef; }
-    </style>
-  </head>
-  <script  src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
-  
-  
+<div id="status">
+  <p>Users online: <span id="user-count">0</span></p>
+</div>
 
-  <body>
-    <ul id="messages"></ul>
-    <form id="form" action="">
-      <input id="input" autocomplete="off" /><button>Send</button>
-    </form>
-    <script>
-        var socket = io();
+<ul id="messages"></ul>
+
+<form id="form">
+  <input id="input" autocomplete="off" placeholder="Type a message" />
+  <button>Send</button>
+</form>
+
+<script  src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+<script>
+  var socket = io(); // Conectando ao servidor
+
+  var form = document.getElementById('form');
+  var input = document.getElementById('input');
+  var messages = document.getElementById('messages');
+  var userCount = document.getElementById('user-count');
+
+  // Evento: Recebe as mensagens de conexão/desconexão
+  socket.on('message', function(msg) {
+    var item = document.createElement('li');
+    item.textContent = msg;
+    messages.appendChild(item);
+  });
+
+  // Evento: Atualiza o número de usuários online
+  socket.on('users online', function(count) {
+    userCount.textContent = count;
+  });
+
+  // Enviar mensagem do formulário
+  form.addEventListener('submit', function(e) {
+    e.preventDefault();
+    if (input.value) {
+      var item = document.createElement('li');
+      item.textContent = 'You: ' + input.value;
+      messages.appendChild(item);
       
-        var form = document.getElementById('form');
-        var input = document.getElementById('input');
+      // Envia a mensagem para o servidor (para que todos recebam)
+      socket.emit('chat message', input.value);
       
-        form.addEventListener('submit', function(e) {
-          e.preventDefault();
-          if (input.value) {
-            socket.emit('chat message', input.value);
-            input.value = '';
-          }
-        });
-      </script>
-  </body>
+      input.value = ''; // Limpa o campo de entrada
+    }
+  });
+</script>
+
+</body>
 </html>
